objects/ASI_CRM_Promotion_Type_of_A_C_Code__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Chi_Name__c</fullName>
        <label>Chi Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Eng_Name__c</fullName>
        <label>Eng Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Promotion Type of A/C Code</label>
    <listViews>
        <fullName>All_CN</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Chi_Name__c</columns>
        <columns>ASI_CRM_Eng_Name__c</columns>
        <columns>ASI_CRM_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Promotion_Type_of_A_C_Code__c.ASI_CRM_CN_Promotion_Type_of_A_C_Code</value>
        </filters>
        <label>All CN</label>
        <language>zh_CN</language>
    </listViews>
    <nameField>
        <label>Promotion Type of A/C Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Type of A/C Codes</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Promotion_Type_of_A_C_Code</fullName>
        <active>true</active>
        <label>CN Promotion Type of A/C Code</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>